CLIENT - Create front page

--- a/workspaces/client/src/app/globals.css
+++ b/workspaces/client/src/app/globals.css
@@ -1,26 +1,31 @@
-@import "tailwindcss";
+@import 'tailwindcss';
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+@theme {
+  --color-love-letter-primary: oklch(87.9% 0.169 91.605);
+  --color-love-letter-primary-hover: oklch(76.9% 0.188 70.08);
+  --color-last-hope-primary: oklch(76.5% 0.177 163.223);
+  --color-last-hope-primary-hover: oklch(59.6% 0.145 163.225);
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+html {
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  background-color: oklch(12.1% 0.005 285.823);
+  background-size: cover;
+  background-attachment: fixed;
+  color: var(--color-sky-50);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+.love-letter-bg {
+  background: radial-gradient(oklch(28.2% 0.091 267.935), oklch(14.5% 0 0));
+  background-size: cover;
+  color: var(--color-sky-50);
 }
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+.last-hope-bg {
+  background: radial-gradient(oklch(23.1% 0 0), oklch(14.5% 0 0));
+  background-size: cover;
+  color: var(--color-sky-50);
 }
