Change url logo for template mails

--- a/workspaces/server/src/mail/templates/reset-password.hbs
+++ b/workspaces/server/src/mail/templates/reset-password.hbs
@@ -54,7 +54,10 @@
   </head>
   <body>
     <div class='container'>
-      <img src='URL_DU_LOGO' alt='Nqbral Games' />
+      <img
+        src='https://nqbral-games.fr/nqbral-games-logo-black.png'
+        alt='Nqbral Games'
+      />
       <h1>Réinitialisation de votre mot de passe</h1>
       <p>Bonjour {{username}},</p>
       <p>
