--- a/workspaces/server/src/mail/templates/welcome.hbs
+++ b/workspaces/server/src/mail/templates/welcome.hbs
@@ -54,8 +54,10 @@
   </head>
   <body>
     <div class='container'>
-      {{! TODO changer URL }}
-      <img src='URL_DU_LOGO' alt='Nqbral Games' />
+      <img
+        src='https://nqbral-games.fr/nqbral-games-logo-black.png'
+        alt='Nqbral Games'
+      />
       <h1>Bienvenue {{username}} !</h1>
       <p>
         Merci de vous être inscrit sur
