SERVER - deletion mail

--- a/workspaces/server/src/mail/templates/delete-account.hbs
+++ b/workspaces/server/src/mail/templates/delete-account.hbs
@@ -58,23 +58,15 @@
         src='https://nqbral-games.fr/nqbral-games-logo-black.png'
         alt='Nqbral Games'
       />
-      <h1>Bienvenue {{username}} !</h1>
+      <h1>Suppression du compte : {{username}} !</h1>
       <p>
-        Merci de vous être inscrit sur
-        <strong>nqbral-games.fr</strong>
-        🎉
+        Nous sommes navrés de vous voir partir.
       </p>
       <p>
-        Nqbral Games est une plateforme de jeux de société en ligne où vous
-        pouvez retrouver vos amis, créer des parties, et découvrir de nouveaux
-        jeux, directement depuis votre navigateur.
+        En espérant que vous avez passé une bonne expérience sur
+        <a class='button' href='https://www.nqbral-games.fr/'>Accéder à Nqbral
+          Games</a>.
       </p>
-      <p>
-        Cliquez ci-dessous pour visiter le site :
-      </p>
-      <a class='button' href='https://www.nqbral-games.fr/'>Accéder à Nqbral
-        Games</a>
-
       <div class='footer'>
         &copy;
         {{year}}
