SERVER - correct mail

--- a/workspaces/server/src/mail/templates/delete-account.hbs
+++ b/workspaces/server/src/mail/templates/delete-account.hbs
@@ -22,7 +22,7 @@
 
       img {
         width: 120px;
-        margin-bottom: 20px;
+        margin-bottom: 10px;
       }
 
       h1 {
@@ -58,14 +58,13 @@
         src='https://nqbral-games.fr/nqbral-games-logo-black.png'
         alt='Nqbral Games'
       />
-      <h1>Suppression du compte : {{username}} !</h1>
+      <h1>Suppression du compte : {{username}}.</h1>
       <p>
         Nous sommes navrés de vous voir partir.
       </p>
       <p>
         En espérant que vous avez passé une bonne expérience sur
-        <a class='button' href='https://www.nqbral-games.fr/'>Accéder à Nqbral
-          Games</a>.
+        <a href='https://www.nqbral-games.fr/'> Nqbral Games</a>.
       </p>
       <div class='footer'>
         &copy;
