SERVER - Correct background image logo for mail template

--- a/workspaces/server/src/mail/templates/delete-account.hbs
+++ b/workspaces/server/src/mail/templates/delete-account.hbs
@@ -55,7 +55,7 @@
   <body>
     <div class='container'>
       <img
-        src='https://nqbral-games.fr/nqbral-games-logo-black.png'
+        src='https://nqbral-games.fr/nqbral-games-logo.png'
         alt='Nqbral Games'
       />
       <h1>Suppression du compte : {{username}}.</h1>
