--- a/workspaces/server/src/mail/templates/welcome.hbs
+++ b/workspaces/server/src/mail/templates/welcome.hbs
@@ -23,6 +23,8 @@
       img {
         width: 120px;
         margin-bottom: 10px;
+        padding: 3px 3px 3px 3px;
+        background-color: #111827;
       }
 
       h1 {
@@ -55,7 +57,7 @@
   <body>
     <div class='container'>
       <img
-        src='https://nqbral-games.fr/nqbral-games-logo-black.png'
+        src='https://nqbral-games.fr/nqbral-games-logo.png'
         alt='Nqbral Games'
       />
       <h1>Bienvenue {{username}} !</h1>
