--- a/workspaces/server/src/mail/templates/delete-account.hbs
+++ b/workspaces/server/src/mail/templates/delete-account.hbs
@@ -23,6 +23,8 @@
       img {
         width: 120px;
         margin-bottom: 10px;
+        padding: 3px 3px 3px 3px;
+        background-color: #111827;
       }
 
       h1 {
